--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  
 
     <div>
-        <a href="https://wa.me/+916351397647text= hello sir! i Need job ">
+        <a href="https://wa.me/+916351397647 text= hello sir! i Need job ">
 
     <img src= "C:\Users\sweta\bbet\work.jpeg" style="height: 1000%;">
 
