--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div>
         <a href="https://wa.me/+916351397647 text= hello sir! i Need job ">
 
-    <img src= "C:\Users\sweta\bbet\work.jpeg" style="height: 1000%;">
+    <img src= "work.jpeg" style="height: 1000%;">
 
 
 </div>
